[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.17"
etagere = "0.2.8"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", rev = "30398c2f0cb79267d440870bc47967579e31a2ae" }
lru = "0.11"

[dev-dependencies]
winit = "0.28.0"
pollster = "0.3.0"
