[package]
name = "cryoglyph"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/iced-rs/cryoglyph"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "25", default-features = false, features = ["wgsl"] }
etagere = "0.2.15"
cosmic-text = "0.14"
lru = { version = "0.13", default-features = false }
rustc-hash = "2.0"

[dev-dependencies]
wgpu = "25"
winit = "0.30"
pollster = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false
