[package]
name = "cryoglyph"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/iced-rs/cryoglyph"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "27", default-features = false, features = ["wgsl"] }
etagere = "0.2"
cosmic-text = { git = "https://github.com/hecrj/cosmic-text.git", rev = "951815a3c13e2c4633c17dfdf2d049a947196002" }
lru = { version = "0.16", default-features = false }
rustc-hash = "2"

[dev-dependencies]
winit = "0.30"
pollster = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false
